# bbc-news-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: OBSERVABILITY.md
inputs/: politics_example.txt  technology_example.txt  thin_example.txt
samples/: README.md
samples/analysis/semantic/: business.md  entertainment.md  health.md  other.md  politics.md  science.md  sports.md  technology.md  uk_news.md  world.md
samples/analysis/static/: stats.json
samples/data/clustered/: sample.json
samples/data/examples/business/: business-56718036.json  business-60653751.json  business-61511456.json
samples/data/examples/entertainment/: entertainment-arts-60861539.json
samples/data/examples/health/: health-64629680.json
samples/data/examples/other/: blogs-the-papers-61114859.json  education-61893149.json
samples/data/examples/politics/: uk-politics-63313742.json  uk-politics-65953605.json
samples/data/examples/sports/: 62328610.json  65228898.json  (+1 more)
samples/style_guide/: _preamble.md  business.md  entertainment.md  health.md  politics.md  science.md  sports.md  technology.md  uk_news.md  world.md
samples/traces/: 2026-04-19_161305_05_run_agent.jsonl
scripts/: 01_cluster.py  02_scrape.py  03_analyze.py  04_generate_style.py  05_run_agent.py
src/: config.py
src/agents/: editor.py  planner.py  writer.py
src/analyzers/: semantic.py  static.py
src/clustering/: cluster.py
src/llm/: __init__.py  anthropic.py  base.py  factory.py  openrouter.py  tracing.py
src/scraping/: scraper.py
src/style/: generator.py
tests/: test_smoke.py
(+183 files in other folders)
